# secure_index

./: CMakeLists.txt  Doxyfile  Intro.md  README.md  secureindex.py  testtool.sh
HotelNameMetrics/: Distribute Normalised Hotel IDs sheet1.txt  Distribute Normalised Hotel IDs sheet2.txt  build.bat
HotelNameMetrics/src/: Distribute.java  DoResult.java
HotelNameMetrics/src/metrics/: AbstractStringMetric.java  CompareResult.java  CosineSimilarity.java  InterfaceStringMetric.java  QGramsDistance.java  SmithWaterman.java  StopWord.java  StringMetricFacade.java
HotelNameMetrics/src/metrics/costfunctions/: AbstractSubstitutionCost.java  InterfaceSubstitutionCost.java  SubCost1_Minus2.java
HotelNameMetrics/src/metrics/math/: MathFuncs.java
HotelNameMetrics/src/metrics/tokenisers/: InterfaceTokeniser.java  TokeniserQGram3Extended.java  TokeniserWhitespace.java
HotelNameMetrics/src/metrics/wordhandlers/: DummyStopTermHandler.java  InterfaceTermHandler.java
cmake/modules/: FindMySQL++.cmake  FindMySQL.cmake  FindReadline.cmake  Findcryptopp.cmake  Findprotobuf.cmake
data/: sample.data
include/: command.hpp  compress_util.hpp  config.hpp  db_adapter.hpp  db_conn_pool.hpp  document.hpp  secure_index.hpp  secure_index_service.hpp  singleton.hpp  types.hpp  utility.hpp
include/boost/bloom_filter/: basic_bloom_filter.hpp
include/cli/: readline.hpp
include/cli/detail/: utility.hpp
include/trie/: array_hash.h  hat_set.h  hat_trie.h
scripts/: install_db.sql
src/: CMakeLists.txt  command.cpp  compress_util.cpp  config.cpp  db_adapter.cpp  db_conn_pool.cpp  document.cpp  main.cpp  secure_index.cpp  secure_index_service.cpp  secureindex.ini  si_server.cpp  si_service.cpp
test/: CMakeLists.txt  array_hash_test.cpp  fileencrypt.cpp  hat_set_test.cpp  string_bloom.cpp
