CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(SECUREINDEX CXX)
LIST(APPEND CMAKE_MODULE_PATH  ${SECUREINDEX_SOURCE_DIR}/cmake/modules)

FIND_PACKAGE(Boost 1.34 REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

FIND_PACKAGE(cryptopp)
IF(NOT CRYPTOPP_FOUND)
MESSAGE(SEND_ERROR "Not Find cryptopp")
ENDIF(NOT CRYPTOPP_FOUND)

#FIND_PACKAGE(protobuf)
#IF(NOT PROTOBUF_FOUND)
#MESSAGE(SEND_ERROR "Not Find protobuf")
#ENDIF(NOT PROTOBUF_FOUND)

FIND_PACKAGE(MySQL)
IF(NOT MYSQL_FOUND)
MESSAGE(SEND_ERROR "Not Find mysql")
ENDIF(NOT MYSQL_FOUND)

FIND_PACKAGE(MySQL++)
IF(NOT MYSQLPP_FOUND)
MESSAGE(SEND_ERROR "Not Find mysqlpp")
ENDIF(NOT MYSQLPP_FOUND)


#FIND_PACKAGE(Readline)
#IF(NOT READLINE_FOUND)
#MESSAGE(SEND_ERROR "Not Find readline")
#ENDIF(NOT READLINE_FOUND)

ADD_DEFINITIONS("-std=c++0x")
INCLUDE_DIRECTORIES(include)
SUBDIRS(src test)
INCLUDE(CPack)
